--- a/CSS_style.css
+++ b/CSS_style.css
@@ -1,5 +1,5 @@
 
-div
+#div1
 {
 	
 	display: flex;
@@ -112,20 +112,96 @@ h2
 
 body 
 {
-	display: flex;
+	
 	background-color: #fffbce;
 	margin: 0;
       padding: 0;
-      flex-wrap: wrap;
-	display: flex;
-	flex-direction: column;
-	justify-content: center;
+      
+	
 	
     
 	        
 
 }
 
+#present
+{
+	
+	font-family: Cooper;
+	font-size: 3rem;
+	text-decoration : underline;
+	
+	text-align:center;
+	background-color: #fce4ec;     /* rose clair */
+    padding: 1rem;                 /* espace intérieur */
+    border-radius: 20rem;           /* coins arrondis */
+    width: 2.5rem;   	
+	min-width: 5.0rem;
+   
+               
+     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+	max-width: 75%;
+    width: 100%;
+	
+  top:1%;
+  left: 12%
+	
+}
+#Content
+{
+	display: flex;
+	flex-wrap: wrap;
+	display: flex;
+	flex-direction: row;
+	justify-content: center;
+}
+#navigation {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+	dsqgbackground-color: #fce4ec;
+	border-radius: 20rem;
+    padding: 15px;
+	width: 2.5rem;   	
+	min-width: 5.0rem;
+	max-width: 75%;
+    width: 100%;
+	
+}
 
+.bouton_nav {
+	font-family: Cooper;
+	text-decoration : underline;
+    padding: 10px 20px;
+    background-color: #fce4ec;
+    color: Black;
+	 padding: 15px;
+    text-decoration: underline;
+    border-radius: 20rem;
+    font-size: 2rem;
+    transition: background-color 0.3s;
+	
+}
+.bouton_nav:hover {
+  transform: scale(0.9);
+  opacity: 0.6;
+  stransform: translate(-50%, -50%);
+  background-color: rgba(225, 225, 225, 0.95);
+}
+#presentation
+{
+	display: flex;
+	flex-direction: column;
+	flex-wrap: nowrap;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+}
+#Paragraphe_presentation
+{
+	font-family: Arial;
+	font-size: 1rem;
+	text-align:center;
+}
 
   
