--- a/CSS_style.css
+++ b/CSS_style.css
@@ -185,7 +185,7 @@ body
 .bouton_nav:hover {
   transform: scale(0.9);
   opacity: 0.6;
-  stransform: translate(-50%, -50%);
+ 
   background-color: rgba(225, 225, 225, 0.95);
 }
 #presentation
@@ -197,11 +197,21 @@ body
     justify-content: space-evenly;
     align-items: center;
 }
-#Paragraphe_presentation
+#content-pst
 {
-	font-family: Arial;
-	font-size: 1rem;
-	text-align:center;
+	max-width: 800px;      /* largeur maximale confortable à lire */
+    margin: 0 auto;        /* centre horizontalement */
+    padding: 20px;         /* un peu d’espace intérieur */
+    display: block; 
+	background-color: white; /* fond crème comme sur le site */
+    font-family: 'Georgia', serif;
+    color: #333;
+	border-radius: 2rem;
+}
+}
+.Paragraphe
+{
+	
 }
 
   
