--- a/CSS_style.css
+++ b/CSS_style.css
@@ -220,26 +220,32 @@ body
 }
 #titrecontacts
 {
+	
 	font-family: Cooper;
 	font-size: 3rem;
 	text-decoration : none;
-	color: white;
+	
 	text-align:center;
 	background-color: #a24F99;     /* rose clair */
     padding: 1rem;                 /* espace intérieur */
     border-radius: 20rem;           /* coins arrondis */
     width: 2.5rem;   	
 	min-width: 5.0rem;
-   
+   color:white;
                
      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
 	max-width: 75%;
     width: 100%;
 	
   top:1%;
-  left: 12%	
+  left: 12%
 }
-
+#Content_contacts2
+{
+	display: flex;
+	flex-direction: column;
+	    align-items: center;
+}
 #list_contacts
 {
 	display: flex;
