--- a/CSS_style.css
+++ b/CSS_style.css
@@ -301,9 +301,9 @@ body
 	font-family: Cooper;
 	text-decoration: underline;
 }
-#fichecontact2
+#fichecontact3
 {
-	
+	transform: translate(0%, -40%);
 }
 
 
@@ -312,9 +312,44 @@ body
     flex-direction: column;
     align-items: center;
   }
-
+	#fichecontact3
+{
+	transform: translate(0%, 0%);
+	width: 90%;
+}
   .fiche {
     width: 100%;
     margin-bottom: 2rem;
   }
-
+}
+#image
+{
+	padding: 100px;
+	margin:10px;
+	display: grid;
+	  grid-template-columns: 600px 600px;
+		grid-template-rows: auto;
+		grid-column-gap: 37px;
+		grid-row-gap: 20px;
+		align-items: center
+		
+	
+}
+.photos
+{
+	width: 600px;
+	max-width: 100%;
+	height: auto;
+	border-radius:2rem	
+}
+@media (max-width: 1080px) {
+	#image
+	{
+	
+		display: flex;
+		flex-direction: column;
+		align-content: center;
+		align-items: center;
+	
+	}
+}
