--- a/CSS_style.css
+++ b/CSS_style.css
@@ -435,6 +435,7 @@ body
 	.bouton_nav
 	{
 		transform: scale(1.25);
+		 margin: 0 30px
 		
 	}
 	
@@ -454,4 +455,68 @@ body
 		display:block;
 	}
 	
+}
+
+
+
+#mention_legales
+
+{
+	
+	
+	
+}
+footer
+{
+	margin: 15px 0
+	
+}
+#infos
+{
+	display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+	background-color: #a24F99;
+	border-radius: 20rem;
+    padding: 15px;
+	color: white;
+	/* width: 2.5rem;   	 */
+	/* min-width: 10.0rem; */
+	/* max-width: 75%; */
+    /* width: 100%; */
+}
+
+.bouton_nav2 {
+	font-family: Cooper;
+	
+    padding: 20px;
+    background-color: #a24F99;
+    color: white;
+	text-decoration: none;
+    border-radius: 20rem;
+    font-size: 1.75rem;
+    transition: background-color 0.3s;
+	 margin: 0 15px
+}
+.bouton_nav2:hover {
+  transform: scale(0.9);
+  opacity: 0.6;
+  
+  background-color: #ebd3db ;
+}
+#infos2
+{
+	display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+	background-color: #a24F99;
+	border-radius: 20rem;
+    padding: 15px;
+	color: white;
+	
+	position: absolute;
+	
+	bottom: -10%;
+	width: 98.4%;
+    
 }
