--- a/CSS_style.css
+++ b/CSS_style.css
@@ -520,3 +520,35 @@ footer
 	width: 98.4%;
     
 }
+
+#Contentmention
+{
+	display: flex;
+	flex-wrap: wrap;
+	display: flex;
+	flex-direction: row;
+	justify-content: center;
+}
+#content-mention
+{	display: flex;
+	flex-wrap: wrap;
+	
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	 
+}
+.mention{
+	max-width: 800px;     
+    
+    padding: 50px; 
+	margin: 25px;
+	margin-bottom: 30px;
+	display: block; 
+	background-color: white; 
+    font-family: 'Roboto', serif;
+    color: #333;
+	
+	font-size: 104%;
+	border-radius: 2rem;
+}
